# cleanarr-runtime

./: .env.example  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml  runner-selector.yml
apps/job/: Dockerfile  Dockerfile.lambda  lambda_handler.py  main.py
apps/lambda/: Dockerfile  main.py
apps/webhook/: Dockerfile  main.py
cleanarr/: __init__.py  cleanup.py  reporting.py  webhook_app.py
cleanarr/scripts/: jellyfin_config.py
cleanarr/webhook/: proxy.py
deploy/examples/: job.yaml  lambda-sqs-consumer.yaml  webhook.yaml
docs/: architecture-review.md  architecture.md  configuration.md  release.md
docs/releases/: v0.2.29.md  v0.2.30.md
tests/: test_cleanup.py  test_cleanup_feature.py  test_cleanup_mock.py  test_lambda_consumer.py  test_proxy.py  test_release_contracts.py  test_reporting.py  test_webhook_queue.py  test_webhook_routes.py
